Add property list filters: name, has_offers, price range, area sort
